--- a/Web/Pages/Shared/_Layout.cshtml
+++ b/Web/Pages/Shared/_Layout.cshtml
@@ -63,9 +63,8 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h6 class="mb-3 text-primary">Quick Links</h6>
-                    <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#" class="text-decoration-none text-muted hover-primary">About</a></li>
+                    <h6 class="mb-3 text-primary">Quick Links</h6>                    <ul class="list-unstyled">
+                        <li class="mb-2"><a asp-page="/About" class="text-decoration-none text-muted hover-primary">About</a></li>
                         <li class="mb-2"><a href="#" class="text-decoration-none text-muted hover-primary">Contact</a></li>
                         <li class="mb-2"><a href="#" class="text-decoration-none text-muted hover-primary">Terms</a></li>
                         <li class="mb-2"><a asp-page="/Privacy" class="text-decoration-none text-muted hover-primary">Privacy</a></li>
